# Jwatrio

./: .gitignore  CMakeLists.txt  README.md  main.c  screen.h
game/: draw.c  draw.h  engine.c  engine.h  event.c  event.h  play.c  play.h  render.c  render.h
render/: menu.c  menu.h  prompt.c  prompt.h  render.c  render.h  text.c  text.h
screen/: connectServer.c  game.c  home.c  multiplay.c  network.c  solo.c
server/: server.c  server.h
utils/: color.h  keyboard.h  typehint.h
